# welcome

./: .gitignore  CMakeLists.txt  Colours.qml  Main.qml  README.md  generate-qmldir.sh  main.cpp  qml.qrc  shell.qml
components/: CAnim.qml  InfoCard.qml  MaterialIcon.qml  NavButton.qml  SectionContainer.qml  StyledRect.qml  StyledText.qml  qmldir
pages/Appearance/: Appearance.qml
pages/GettingStarted/: GettingStarted.qml
pages/Modules/: Modules.qml
pages/Resources/: Resources.qml
pages/Welcome/: Welcome.qml
qs/components/: qmldir
qs/config/: qmldir
qs/services/: qmldir
qs/utils/: qmldir
sections/: AppearanceSection.qml  WelcomeSection.qml
utils/: Appearance.qml  Colours.qml  Config.qml  Palette.qml
